fix: zoom button alignment

--- a/src/styles/App.css
+++ b/src/styles/App.css
@@ -279,6 +279,7 @@ canvas {
 }
 
 .zoom-button {
+    padding-bottom: 2px;
     width: 50px;
 }
 
